--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,17 @@
-name: 🚀 Auto Deploy AdmiFlow – PMU
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: 🧾 Checkout Code
-      uses: actions/checkout@v3
-
-    - name: ⚙️ Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-
-    - name: 📦 Install Dependencies
-      run: npm install
-
-    - name: 🧪 Run Health Check (Port 3000)
-      run: |
-        node server.js & sleep 5
-        curl -f http://localhost:3000 || exit 1
-
-    - name: ✅ Deployment Success
-      run: echo "🚀 AdmiFlow – PMU has been deployed successfully."
+      - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - run: npm install
+      - run: npm run build
