--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "admiflow-pmu",
   "version": "1.0.0",
-  "description": "AdmiFlow PMU – منصة القبول الذكية",
-  "main": "server.js",
+  "description": "AdmiFlow PMU Smart Admissions Workflow",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node src/server.js",
+    "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "uuid": "^9.0.0",
-    "dotenv": "^16.0.3"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
